--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.0",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^11.1.9",
     "gsap": "^3.12.2",
+    "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "tailwindcss": "^3.4.3",
     "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
   },
